# autodoc

./: .gitignore  LICENSE.md  README.md  autodoc.py  pyproject.toml
autodoc/: __init__.py  autodoc.py  core.py  fonction.py  utils.py
autodoc/decomanager/: conf.py  depopulater.py  populater.py
ressources/: flot_autodoc.drawio
